--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "5400:5400"
-    image: sahasoumadip/openai-rag:1.2
+      - 5400:5400
+    image: sahasoumadip/openai-rag:1.3
     container_name: RAG_Backend
     environment:
       - OPENAI_API_KEY
@@ -16,4 +16,4 @@ services:
       - VectorDB_INDEX
       - VectorDB_USER_NAME
       - VectorDB_password
-    command: "--workers 4"
+    command: --workers 4
