--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 services:
-  web:
-    build: .
-    ports:
-      - 3000:3000
-    image: "rag-frontend"
-    container_name: "rag-frontend"
+    web:
+        build:
+            context: .
+            dockerfile: Dockerfile
+            args:
+                - SERVER_URL=http://localhost:8000
+        ports:
+            - 3000:3000
+        image: "rag-frontend"
+        container_name: "rag-frontend"
