--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,5 @@ services:
       - 3000:3000
     image: "rag-frontend"
     container_name: "rag-frontend"
+    environment:
+      - BACKEND_URL=http://take.com
