--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 services:
   openai-rag:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     ports:
       - 5400:5400
     image: sahasoumadip/openai-rag:1.3
@@ -16,4 +16,4 @@ services:
       - VectorDB_INDEX
       - VectorDB_USER_NAME
       - VectorDB_password
-    command: --workers 4
+    command: --workers 2
