--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 services:
     backend:
-        # build:
-        #     context: ./Backend
-        #     dockerfile: Dockerfile
+        build:
+            context: ./Backend
+            dockerfile: Dockerfile
         ports:
             - 5400:5400
-        image: sahasoumadip/openai-rag:1.3
+        image: sahasoumadip/openai-rag:1.3.1
         container_name: RAG_Backend
         environment:
-            - OPENAI_API_KEY
-            - llm_model_name
-            - embedding_model_name
-            - VectorDB_HOST
-            - VectorDB_INDEX
-            - VectorDB_USER_NAME
-            - VectorDB_password
+            - OPENAI_API_KEY=${OPENAI_API_KEY}
+            - LLM_MODEL_NAME=${LLM_MODEL_NAME}
+            - EMBEDDING_MODEL_NAME=${EMBEDDING_MODEL_NAME}
+            - VECTORDB_HOST=${VECTORDB_HOST}
+            - VECTORDB_INDEX=${VECTORDB_INDEX}
+            - VECTORDB_USER_NAME=${VECTORDB_USER_NAME}
+            - VECTORDB_PASSWORD=${VECTORDB_PASSWORD}
         command: "--workers 2"
         networks:
             - openai-rag
