--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@million/lint": "^1.0.0-rc.76",
     "markdown-to-jsx": "^7.4.7",
     "next": "14.2.4",
     "react": "^18",
